# opensleep

./: .gitignore  BACKGROUND.md  Cargo.toml  HASS.md  MQTT.md  README.md  SETUP.md  build_send  example_couples.json  example_couples.ron  example_solo.json  example_solo.ron  frank.service  opensleep.service  test
.cargo/: config.toml
diagrams/: 8.d2  main.d2  ninesleep.d2  opensleep.d2
src/: README.md  api.rs  config.rs  led.rs  main.rs  mqtt.rs  presence.rs  reset.rs  scheduler.rs  settings.rs  test.rs
src/common/: checksum.rs  codec.rs  mod.rs  packet.rs  serial.rs
src/config/: mod.rs  mqtt.rs  tests.rs
src/frank/: command.rs  error.rs  mod.rs  socket.rs  state.rs  vibration.rs
src/frozen/: README.md  command.rs  manager.rs  mod.rs  packet.rs  profile.rs  state.rs
src/led/: README.md  controller.rs  mod.rs  model.rs  patterns.rs  tests.rs
src/mqtt/: command.rs  mod.rs  model.rs  publisher.rs
src/sensor/: README.md  command.rs  manager.rs  manager_old.rs  mod.rs  packet.rs  presence.rs  state.rs
src/stream/: mod.rs  model.rs
