[package]
name = "opensleep"
version = "0.1.0"
edition = "2024"

[dependencies]
ciborium = "0.2.2"
hex = "0.4.3"
log = "0.4"
serde_bytes = "0.11.14"
simplelog = "0.12.2"
tokio = { version = "1.45.1", features = [
  "fs",
  "io-util",
  "rt",
  "sync",
  "macros",
] }
jiff = { version = "0.2.14", features = ["serde"] }
actix-web = "4.11.0"
thiserror = "2.0.12"
serde = "1.0.219"
serde_json = "1.0.140"
paste = "1.0.15"
