[package]
name = "opensleep"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
ron = "0.10.1"
rumqttc = "0.24.0"
bytes = "1.10.1"
csv = "1.3.1"
futures-util = "0.3.31"
hex-literal = "1.0.0"
memchr = "2.7.5"
rustfft = "6.4.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full", "mio"] }
tokio-serial = "5.4.5"
tokio-util = { version = "0.7.15", features = ["codec"] }
jiff = { version = "0.2.15", features = ["serde", "tzdb-bundle-always"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.8"
serde_json = "1.0.142"
linux-embedded-hal = "0.4.0"
embedded-hal = "1.0.0"
strum_macros = "0.27.2"
strum = "0.27.2"
cbor4ii = { version = "1.0.0", features = ["use_std", "serde1"] }
